[tool.poetry]
name = "repl_python3_RunNoneTesralSchewTin"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
PyDictionary = "^2.0.1"
wikipedia = "^1.4.0"
Flask = "^2.0.1"
chatterbot-voice = "^0.1.5"
pytz = "^2021.1"
prsaw = "^0.4.0"
opencv-python = "^4.5.3"
pyarmor = "^6.7.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
